started adding mobile layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="index.html"><img src="images/simografika-logo.png" alt=""></a>
           </div>
           <ul class="navbar-ul">
-            <li class="navbar-li" data-target="posters"><a href="#">Posters</a></li>
+            <li class="navbar-li nav-active" data-target="posters"><a href="#">Posters</a></li>
             <li class="navbar-li" data-target="social"><a href="#">Social Media</a></li>
             <li class="navbar-li" data-target="motion"><a href="#">Motion</a></li>
             <li class="navbar-li" data-target="logo"><a href="">Logo Design</a></li>
