--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
           <img src="images/social/social-lkt.png" alt="">
         </div>
       </div>
+      <div id="motion" class="img-section">
+          <div class="section-text">
+            <p>
+              Campaign graphics designed for social platforms — balancing clarity, impact,
+              and brand consistency across formats.
+            </p>
+          </div>
+        <div class="gallery">
+          <video src="videos/lkl-dunkman.mp4" autoplay loop muted playsinline></video>
+          <video src="videos/shapes_motion.mp4" autoplay loop muted playsinline></video>
+        </div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
