--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <a href="index.html"><img src="images/simografika-logo.png" alt=""></a>
           </div>
           <ul class="navbar-ul">
-            <li class="navbar-li nav-active" data-target="posters"><a href="#">Posters</a></li>
-            <li class="navbar-li" data-target="social"><a href="#">Social Media</a></li>
-            <li class="navbar-li" data-target="motion"><a href="#">Motion</a></li>
-            <li class="navbar-li" data-target="logo"><a href="">Logo Design</a></li>
-            <li class="navbar-li" data-target="experiments"><a href="#">Experiments</a></li>
-            <li class="navbar-li" data-target="lidl"><a href="#">LIDL print</a></li>
-            <li class="navbar-li" data-target="lini"><a href="#">Lini SM</a></li>
-            <li class="navbar-li" data-target="siauliai"><a href="#">BC Šiauliai</a></li>
+            <li class="navbar-li nav-active" data-target="posters"><a href="">Posters</a></li>
+            <li class="navbar-li" data-target="social"><a href="">Social Media</a></li>
+            <li class="navbar-li" data-target="motion"><a href="">Motion</a></li>
+            <li class="navbar-li" data-target="logos"><a href="">Logo Design</a></li>
+            <li class="navbar-li" data-target="experiments"><a href="">Experiments</a></li>
+            <li class="navbar-li" data-target="lidl"><a href="">LIDL print</a></li>
+            <li class="navbar-li" data-target="lini"><a href="">Lini SM</a></li>
+            <li class="navbar-li" data-target="siauliai"><a href="">BC Šiauliai</a></li>
           </ul>
         </nav>
       </div>
@@ -77,6 +77,21 @@
         <div class="gallery">
           <video src="videos/lkl-dunkman.mp4" autoplay loop muted playsinline></video>
           <video src="videos/shapes_motion.mp4" autoplay loop muted playsinline></video>
+        </div>
+      </div>
+      <div id="logos" class="img-section">
+          <div class="section-text">
+            <p>
+            </p>
+          </div>
+        <div class="gallery">
+          <img src="images/logos/mp_logo_showcase.png" alt="">
+          <img src="images/logos/hertz-explore.png" alt="">
+          <img src="images/logos/store-rework.png" alt="">
+          <img src="images/logos/owlook.png" alt="">
+          <img src="images/logos/s-logo-side.png" alt="">
+          <img src="images/logos/bun-spin.png" alt="">
+          <img src="images/logos/square-d.png" alt="">
         </div>
       </div>
     </div>
