finished uploading content

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <li class="navbar-li" data-target="social"><a href="">Social Media</a></li>
             <li class="navbar-li" data-target="motion"><a href="">Motion</a></li>
             <li class="navbar-li" data-target="logos"><a href="">Logo Design</a></li>
-            <li class="navbar-li" data-target="experiments"><a href="">Experiments</a></li>
-            <li class="navbar-li" data-target="lidl"><a href="">LIDL print</a></li>
+            <!-- <li class="navbar-li" data-target="experiments"><a href="">Experiments</a></li> -->
+            <li class="navbar-li" data-target="lidl"><a href="">LIDL</a></li>
             <li class="navbar-li" data-target="lini"><a href="">Lini SM</a></li>
             <li class="navbar-li" data-target="siauliai"><a href="">BC Šiauliai</a></li>
           </ul>
@@ -32,8 +32,6 @@
         <div id="posters" class="img-section img-active">
           <div class="section-text">
             <p>
-              A selection of poster designs I created — exploring typography, bold color palettes,
-              and composition inspired by modern graphic design.
             </p>
           </div>
           <div class="gallery">
@@ -51,8 +49,6 @@
         <div id="social" class="img-section">
           <div class="section-text">
             <p>
-              Campaign graphics designed for social platforms — balancing clarity, impact,
-              and brand consistency across formats.
             </p>
           </div>
         <div class="gallery">
@@ -65,17 +61,23 @@
           <img src="images/social/social-europa.png" alt="">
           <img src="images/social/social-polifonija.jpg" alt="">
           <img src="images/social/social-lkt.png" alt="">
+          <img src="images/social/social-statkevicius.png" alt="">
+          <img src="images/social/social-mekas.png" alt="">
+          <img src="images/social/social-ciao_sole.png" alt="">
+          <img src="images/social/social-brokoli.png" alt="">
+          <img src="images/social/social-river_mall.png" alt="">
+          <img src="images/social/social-europass.png" alt="">
         </div>
       </div>
       <div id="motion" class="img-section">
           <div class="section-text">
             <p>
-              Campaign graphics designed for social platforms — balancing clarity, impact,
-              and brand consistency across formats.
             </p>
           </div>
-        <div class="gallery">
+        <div class="gallery gallery-single">
           <video src="videos/lkl-dunkman.mp4" autoplay loop muted playsinline></video>
+          <video src="videos/twinsbet-video.mp4" autoplay loop muted playsinline></video>
+          <video src="videos/golden-wilds.mp4" autoplay loop muted playsinline></video>
           <video src="videos/shapes_motion.mp4" autoplay loop muted playsinline></video>
         </div>
       </div>
@@ -92,6 +94,50 @@
           <img src="images/logos/s-logo-side.png" alt="">
           <img src="images/logos/bun-spin.png" alt="">
           <img src="images/logos/square-d.png" alt="">
+        </div>
+      </div>
+      <div id="lidl" class="img-section">
+          <div class="section-text">
+            <p>
+              Printed posters designed during my tenure at Lidl Lietuva.<br>Significantly constrained by the brand's rules and guidelines in terms of creative freedom.
+            </p>
+          </div>
+        <div class="gallery">
+          <img src="images/lidl/lidl-01v1.jpg" alt="">
+          <img src="images/lidl/lidl-01v2.jpeg" alt="">
+          <img src="images/lidl/lidl-02v1.jpg" alt="">
+          <img src="images/lidl/lidl-02v2.jpeg" alt="">
+          <img src="images/lidl/lidl-05v1.png" alt="">
+          <img src="images/lidl/lidl-03v1.jpg" alt="">
+          <img src="images/lidl/lidl-03v2.jpeg" alt="">
+          <img src="images/lidl/lidl-04v1.jpg" alt="">
+          <img src="images/lidl/lidl-04v2.jpeg" alt="">
+          <img src="images/lidl/lidl-05v2.jpeg" alt="">
+        </div>
+      </div>
+      <div id="lini" class="img-section">
+          <div class="section-text">
+          </div>
+        <div class="gallery gallery-single">
+          <img src="images/lini/lini-01.jpg" alt="">
+          <img src="images/lini/lini-02.jpg" alt="">
+          <img src="images/lini/lini-03.jpg" alt="">
+        </div>
+      </div>
+      <div id="siauliai" class="img-section">
+          <div class="section-text">
+            <p>This project focused on redesigning the visual identity of the Šiauliai Basketball Club. The objective was to refresh the logo and color scheme, as well as enhance the overall visual identity across digital and print mediums. Please note, I am not affiliated with the club; this was a personal project undertaken to refine my design skills.</p>
+          </div>
+        <div class="gallery gallery-single">
+          <img src="images/siauliai/siauliai-01.png" alt="">
+          <img src="images/siauliai/siauliai-02.png" alt="">
+          <img src="images/siauliai/siauliai-03.png" alt="">
+          <img src="images/siauliai/siauliai-04.png" alt="">
+          <img src="images/siauliai/siauliai-05.png" alt="">
+          <img src="images/siauliai/siauliai-06.png" alt="">
+          <img src="images/siauliai/siauliai-07.png" alt="">
+          <img src="images/siauliai/siauliai-08.png" alt="">
+          <img src="images/siauliai/siauliai-09.png" alt="">
         </div>
       </div>
     </div>
