added footer and subtle background animation. Fixed mobile layout

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           <img src="images/logos/mp_logo_showcase.png" alt="">
           <img src="images/logos/hertz-explore.png" alt="">
           <img src="images/logos/store-rework.png" alt="">
+          <img src="images/logos/fabijoniskiu-klinika.png" alt="">
           <img src="images/logos/owlook.png" alt="">
           <img src="images/logos/s-logo-side.png" alt="">
           <img src="images/logos/bun-spin.png" alt="">
@@ -140,6 +141,10 @@
           <img src="images/siauliai/siauliai-09.png" alt="">
         </div>
       </div>
+    </div>
+    <div class="footer">
+      <footer>© simografika</footer>
+    </div>
     </div>
     <script src="script.js"></script>
   </body>
